safari nav bug update

--- a/index.html
+++ b/index.html
@@ -34,40 +34,39 @@
             <span id="splash-overlay" class="splash"></span>
             <span id="welcome" class="z-depth-4"></span>
 
-            <header class="navbar-fixed">
-                <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top row darken-3">
-                    <a href="#home" class="navbar-brand">DAVID HSIEH</a>
-                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navLinks">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a href="#home" class="nav-link">HOME</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#about" class="nav-link">ABOUT</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#projects" class="nav-link">PROJECTS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#contact" class="nav-link">CONTACT</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-        
-                <div class="home-content">
-                    <p>Hi! I am David.</p>
-                    <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+            <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+                <a href="#home" class="navbar-brand">DAVID HSIEH</a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks"
+                    aria-label="Toggle Navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navLinks">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="#home" class="nav-link">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#about" class="nav-link">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#projects" class="nav-link">PROJECTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#contact" class="nav-link">CONTACT</a>
+                        </li>
+                    </ul>
                 </div>
-                <div>
-                    <a href="#about" class="scroll-down"></a>
-                </div>
-            </header>
+            </nav>
+
+            <div class="home-content">
+                <p>Hi! I am David.</p>
+                <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+            </div>
+            <div>
+                <a href="#about" class="scroll-down"></a>
+            </div>
         </div>
-        
+
     </section>
 
     <!-- About -->
