.gif deprecated for performance

--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@
                 <div id="percolation-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/interactive.gif" alt="First slide">
+                            <video class="d-block w-100" src="images/demo/interactive.mp4" alt="First slide"  muted autoplay playsinline>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/jerry47.gif" alt="Second slide">
+                            <video class="d-block w-100" src="images/demo/jerry47.mp4" alt="Second slide" muted autoplay playsinline>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/input20.gif" alt="Third slide">
+                            <video class="d-block w-100" src="images/demo/input20.mp4" alt="Third slide" muted autoplay playsinline>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/heart25.gif" alt="Forth slide">
+                            <video class="d-block w-100" src="images/demo/heart25.mp4" alt="Forth slide" muted autoplay playsinline>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="images/michael61.gif" alt="Fifth slide">
+                            <video class="d-block w-100" src="images/demo/michael61.mp4" alt="Fifth slide" muted autoplay playsinline>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#percolation-carousel" role="button" data-slide="prev">
@@ -304,9 +304,9 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <img class="bot-picture"
-                    src="https://user-images.githubusercontent.com/61106644/124215941-a433d580-db27-11eb-9bdc-87e112f429bc.gif"
-                    alt="">
+                <video class="bot-picture"
+                    src="images/demo/bot.mp4"
+                    alt="" muted autoplay playsinline>
             </div>
         </div>
     </section>
@@ -320,6 +320,27 @@
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
             <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><i class="fas fa-address-card"></i></a>
             <p>© 2021 David Hsieh</p>
+        </div>
+        <!-- Experiment -->
+        <div class="footer-links">
+            <div class="tooltip github">
+                <a class="footer-link" href="https://github.com/davidyen-888"><span
+                        class="tooltipText github">Github</span>
+                    <i class="fab fa-github-square"></i></a>
+            </div>
+            <div class="tooltip linkedin">
+                <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-yen/"><span
+                        class="tooltipText linkedin">LinkedIn</span>
+                    <i class="fab fa-linkedin link"></i></a>
+            </div>
+            <div class="tooltip email">
+                <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><span class="tooltipText email">Email</span>
+                    <i class="fas fa-envelope-square"></i></a>
+            </div>
+            <div class="tooltip resume">
+                <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><span class="tooltipText resume">Resume</span>
+                    <i class="fas fa-address-card"></i></a>
+            </div>
         </div>
     </section>
 
