Collapse project intro

--- a/index.html
+++ b/index.html
@@ -154,15 +154,25 @@
                 </div>
                 <div class="project-intro">
                     <p>
-                        A web application that resembles the features of Google Map including <b> rastering</b> ,
-                        <b>routing</b>(finding the shortest path), <b>autocomplete searching</b> and <b>navigation
-                            direction</b> functions.
+                        <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#bearmap-intro"
+                            aria-expanded="false" aria-controls="collapse-intro">
+                            <strong>Introduction</strong>
+                        </a>
                     </p>
-                    <p>
-                        Implemented all the backend algorithms by Java with front end code and
-                        map data from
-                        <a href="https://www.openstreetmap.org/">OpenStreetMap</a> provided as a base.
-                    </p>
+                    <div class="collapse" id="bearmap-intro">
+                        <div class="card card-body">
+                            <p>
+                                A web application that resembles the features of Google Map including <b> rastering</b> ,
+                                <b>routing</b>(finding the shortest path), <b>autocomplete searching</b> and <b>navigation
+                                    direction</b> functions.
+                            </p>
+                            <p>
+                                Implemented all the backend algorithms by Java with front end code and
+                                map data from
+                                <a href="https://www.openstreetmap.org/">OpenStreetMap</a> provided as a base.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div id="skillset">
                     <span>Java</span>
@@ -209,13 +219,23 @@
                 </div>
                 <div class="project-intro">
                     <p>
-                        A percolation system model implemented with <b>Disjoint Sets</b> data structure and
-                        calculate Monte Carlo simulation to estimate the percolation threshold.
+                        <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#percolation-intro"
+                            aria-expanded="false" aria-controls="collapse-intro">
+                            <strong>Introduction</strong>
+                        </a>
                     </p>
-                    <p>
-                        With input files or mouse clicking, the visualizer can animates the results of opening sites
-                        in a percolation system.
-                    </p>
+                    <div class="collapse" id="percolation-intro">
+                        <div class="card card-body">
+                            <p>
+                                A percolation system model implemented with <b>Disjoint Sets</b> data structure and
+                                calculate Monte Carlo simulation to estimate the percolation threshold.
+                            </p>
+                            <p>
+                                With input files or mouse clicking, the visualizer can animates the results of opening sites
+                                in a percolation system.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div id="skillset">
                     <span>Java</span>
@@ -263,13 +283,23 @@
                 </div>
                 <div class="project-intro">
                     <p>
-                        An <b>Android application</b> connected with Arduino air quality sensor(PMS3003) by
-                        bluetooth module.
+                        <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#airbox-intro"
+                            aria-expanded="false" aria-controls="collapse-intro">
+                            <strong>Introduction</strong>
+                        </a>
                     </p>
-                    <p>
-                        Users can detect the PM 2.5 level of the their environment without connecting
-                        to the Internet.
-                    </p>
+                    <div class="collapse" id="airbox-intro">
+                        <div class="card card-body">
+                            <p>
+                                An <b>Android application</b> connected with Arduino air quality sensor(PMS3003) by
+                                bluetooth module.
+                            </p>
+                            <p>
+                                Users can detect the PM 2.5 level of the their environment without connecting
+                                to the Internet.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div id="skillset">
                     <span>Java</span>
@@ -292,9 +322,19 @@
                 </div>
                 <div class="project-intro">
                     <p>
-                        An online discord bot coded with Python and hosted on Heroku. Respond to user's
-                        concurrent weather, anytime, anywhere using OpenWeatherMap API.
+                        <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#weather-bot-intro"
+                            aria-expanded="false" aria-controls="collapse-intro">
+                            <strong>Introduction</strong>
+                        </a>
                     </p>
+                    <div class="collapse" id="weather-bot-intro">
+                        <div class="card card-body">
+                            <p>
+                                An online discord bot coded with Python and hosted on Heroku. Respond to user's
+                                concurrent weather, anytime, anywhere using OpenWeatherMap API.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div id="skillset">
                     <span>Python</span>
