--- a/index.html
+++ b/index.html
@@ -399,6 +399,10 @@
     <script src="https://kit.fontawesome.com/ece26f3653.js" crossorigin="anonymous"></script>
     <!-- Custom JS -->
     <script src="app.js"></script>
+    <!-- Smooth-Scroll JS -->
+    <script>
+        var scroll = new SmoothScroll('a[href*="#"]');
+    </script> 
 </body>
 
 </html>
