--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <i class="fas fa-envelope-square"></i></a>
             </div>
             <div class="tooltip resume">
-                <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><span class="tooltipText resume">Resume</span>
+                <a class="footer-link" href="David's Resume.pdf"><span class="tooltipText resume">Resume</span>
                     <i class="fas fa-address-card"></i></a>
             </div>
         </div>
@@ -411,7 +411,7 @@
     <!-- Smooth-Scroll JS -->
     <script>
         var scroll = new SmoothScroll('a[href*="#"]');
-    </script> 
+    </script>
 </body>
 
 </html>
