--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <strong>Programming Language</strong>
                                 <br>
                                 <em>
-                                    JavaScript(ES6), Python, Java
+                                    Python, Java, JavaScript(ES6), C++, Haskell, Golang
                                 </em>
                             </p>
                         </li>
@@ -121,16 +121,16 @@
                                 <strong>Technologies</strong>
                                 <br>
                                 <em>
-                                    HTML5, CSS3, Bootstrap, Git
+                                    HTML5, CSS3, Bootstrap, Node.js, MySQL
                                 </em>
                             </p>
                         </li>
                         <li>
                             <p>
-                                <strong>Tools</strong>
+                                <strong>Tools & OS</strong>
                                 <br>
                                 <em>
-                                    VScode, IntelliJ, Heroku
+                                    VScode, IntelliJ, Heroku, Git, Docker, MacOS, Windows, Linux (Ubuntu)
                                 </em>
                             </p>
                         </li>
