--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <p>
                             I am also capable of learning new skills what my job needed in the fast pace. My
                             goal is to be a learner and contributor in every position, especially in the field
-                            of <b>Frontend and Software engineering</b>.
+                            of <b>Full stack developer</b>.
                         </p>
                     </div>
                 </div>
