--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    <a id="to-top-button"></a>
     <!-- Home -->
     <section id="home" class="home-container">
         <div class="welcome">
