Update date format and resume

--- a/index.html
+++ b/index.html
@@ -368,29 +368,13 @@
             <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-yen/"><i
                     class="fab fa-linkedin link"></i></a>
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
-            <a class="footer-link" href="Resume__Hsieh, Sung-Yan.pdf"><i class="fas fa-address-card"></i></a>
-            <p>© 2021 David Hsieh</p>
-        </div>
-        <!-- Experiment -->
-        <div class="footer-links">
-            <div class="tooltip github">
-                <a class="footer-link" href="https://github.com/davidyen-888"><span
-                        class="tooltipText github">Github</span>
-                    <i class="fab fa-github-square"></i></a>
-            </div>
-            <div class="tooltip linkedin">
-                <a class="footer-link" href="https://www.linkedin.com/in/david-hsieh-yen/"><span
-                        class="tooltipText linkedin">LinkedIn</span>
-                    <i class="fab fa-linkedin link"></i></a>
-            </div>
-            <div class="tooltip email">
-                <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><span class="tooltipText email">Email</span>
-                    <i class="fas fa-envelope-square"></i></a>
-            </div>
-            <div class="tooltip resume">
-                <a class="footer-link" href="David's Resume.pdf"><span class="tooltipText resume">Resume</span>
-                    <i class="fas fa-address-card"></i></a>
-            </div>
+            <a class="footer-link"
+                href="https://docs.google.com/document/d/16E9r3eMj0N07ckkRNs-d7-IfhFb5wc3l1o0ZqCB3Vuo/edit"><i
+                    class="fas fa-address-card"></i></a>
+            <p class="footer-links">©
+                <script>document.write(new Date().getFullYear());</script>
+                David Hsieh
+            </p>
         </div>
     </section>
 
