--- a/index.html
+++ b/index.html
@@ -110,28 +110,21 @@
                     <ul>
                         <li>
                             <p>
-                                <strong>Programming Language</strong>
+                                <strong>Programming Languages</strong>
                                 <br>
                                 <em>
-                                    Python, Java, JavaScript(ES6), C++, Haskell, Golang
+                                    Python, Golang, Java, JavaScript, C++, Haskell, PHP
                                 </em>
                             </p>
                         </li>
                         <li>
                             <p>
-                                <strong>Technologies</strong>
+                                <strong>Technologies, Tools and OS</strong>
                                 <br>
                                 <em>
-                                    HTML5, CSS3, Bootstrap, Node.js, MySQL
-                                </em>
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>Tools & OS</strong>
-                                <br>
-                                <em>
-                                    VScode, IntelliJ, Heroku, Git, Docker, MacOS, Windows, Linux (Ubuntu)
+                                    HTML, CSS, BootStrap, Node.js, React.js, jQuery, MySQL, Markdown, JSON, TCP/HTTP,
+                                    NumPy, Tensorflow, JUnit, VSCode, IntelliJ, Heroku, Git, Docker, Android Studio,
+                                    MacOS, Windows, Linux Ubuntu
                                 </em>
                             </p>
                         </li>
@@ -405,7 +398,7 @@
                     class="fab fa-linkedin link"></i></a>
             <a class="footer-link" href="mailto:syhsieh@ucsd.edu"><i class="fas fa-envelope-square"></i></a>
             <a class="footer-link"
-                href="https://docs.google.com/document/d/16E9r3eMj0N07ckkRNs-d7-IfhFb5wc3l1o0ZqCB3Vuo/edit"><i
+                href="https://docs.google.com/document/d/16E9r3eMj0N07ckkRNs-d7-IfhFb5wc3l1o0ZqCB3Vuo/preview"><i
                     class="fas fa-address-card"></i></a>
             <p class="footer-links">©
                 <script>document.write(new Date().getFullYear());</script>
