Add external link for project

--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/blur-the-background"><i
                             class="fab fa-github"></i></a>
+                    <a class="external-project-link" href="https://davidyen-888.github.io/blur-the-background/"><i
+                            class="fas fa-external-link-alt"></i></a>
                 </div>
                 <div class="project-intro">
                     <p>
