--- a/index.html
+++ b/index.html
@@ -211,6 +211,78 @@
 
         <div class="projects-content row">
             <div class="col" id="projects-description">
+                <h2>SurfStore</h2>
+                <div class="project-link-group" id="project-link">
+                    <a class="external-project-link" href="https://www.youtube.com/watch?v=VcJR44POXdM"><i
+                            class="fas fa-external-link-alt"></i></a>
+                </div>
+                <div class="project-intro">
+                    <p>
+                        <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#surf-intro"
+                            aria-expanded="false" aria-controls="collapse-intro">
+                            <strong>Introduction</strong>
+                        </a>
+                    </p>
+                    <div class="collapse" id="surf-intro">
+                        <div class="card card-body">
+                            <p>
+                                Built a cloud-based file storage syncing service with versioning feature via gRPC that
+                                utilized Raft protocol to ensure the system consistency regardless of server failures by
+                                Go.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="skillset">
+                    <span>Golang</span>
+                    <span>gRPC</span>
+                    <span>cloud-based</span>
+                    <span>Raft</span>
+                </div>
+            </div>
+            <div class="col" id="projects-image">
+                <video class="surf-picture" src="images/demo/surfstore.mp4" alt="" muted autoplay loop playsinline>
+            </div>
+        </div>
+
+        <div class="projects-content row">
+            <div class="col" id="projects-description">
+                <h2>Unbeatable Tic Tac Toe</h2>
+                <div class="project-link-group" id="project-link">
+                    <a class="github-project-link" href="https://github.com/davidyen-888/unbeatable-tic-tac-toe"><i
+                            class="fab fa-github"></i></a>
+                    <a class="external-project-link" href="https://davidyen888-tic-tac-toe.netlify.app/"><i
+                            class="fas fa-external-link-alt"></i></a>
+                </div>
+                <div class="project-intro">
+                    <p>
+                        <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#ttt-intro"
+                            aria-expanded="false" aria-controls="collapse-intro">
+                            <strong>Introduction</strong>
+                        </a>
+                    </p>
+                    <div class="collapse" id="ttt-intro">
+                        <div class="card card-body">
+                            <p>
+                                Launched a responsive tic-tac-toe game website with steps recording feature and AI
+                                opponent utilizing minimax algorithm.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="skillset">
+                    <span>JavaScript</span>
+                    <span>CSS</span>
+                    <span>React</span>
+                </div>
+            </div>
+            <div class="col" id="projects-image">
+                <video class="ttt-picture" src="images/demo/ttt.mp4" alt="" muted autoplay loop playsinline>
+            </div>
+        </div>
+
+        <div class="projects-content row">
+            <div class="col" id="projects-description">
                 <h2>Blur The Background</h2>
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/blur-the-background"><i
