--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <video class="surf-picture" src="images/demo/surfstore.mp4" alt="" muted autoplay loop playsinline>
+                <img class="surf-picture" src="images/surfstore.png"></img>
             </div>
         </div>
 
