--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <img class="surf-picture" src="images/surfstore.png"></img>
+                <img class="demo-picture" src="images/surfstore.png"></img>
             </div>
         </div>
 
@@ -277,7 +277,7 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <video class="ttt-picture" src="images/demo/ttt.mp4" alt="" muted autoplay loop playsinline>
+                <video class="demo-picture" src="images/demo/ttt.mp4" alt="" muted autoplay loop playsinline>
             </div>
         </div>
 
@@ -314,7 +314,7 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <video class="blur-picture" src="images/demo/blur.mp4" alt="" muted autoplay loop playsinline>
+                <video class="demo-picture" src="images/demo/blur.mp4" alt="" muted autoplay loop playsinline>
             </div>
         </div>
 
@@ -424,7 +424,7 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <img class="pm25-picture" src="images/pm2.5.jpg">
+                <img class="demo-picture" src="images/pm2.5.jpg">
             </div>
         </div>
 
@@ -459,7 +459,7 @@
                 </div>
             </div>
             <div class="col" id="projects-image">
-                <video class="bot-picture" src="images/demo/bot.mp4" alt="" muted autoplay loop playsinline>
+                <video class="demo-picture" src="images/demo/bot.mp4" alt="" muted autoplay loop playsinline>
             </div>
         </div>
     </section>
