--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                         <li class="nav-item">
                             <a data-scroll href="#contact" class="nav-link">CONTACT</a>
                         </li>
+                        <li class="dropdown show">
+                            <a class="nav-link dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                BLOG
+                            </a>
+
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item"
+                                    href="https://davidhsieh.notion.site/23a21e6898054554b41863f24c12356f?v=a591d50d39914b558c98267883debb3e">Computer
+                                    Security</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </nav>
