--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@
                 <div class="project-link-group" id="project-link">
                     <a class="github-project-link" href="https://github.com/davidyen-888/PM2.5-Detector"><i
                             class="fab fa-github"></i></a>
+                    <a class="external-project-link" href="https://www.youtube.com/watch?v=nG5KKAlwMCc&t=1s"><i
+                            class="fas fa-external-link-alt"></i></a>
                 </div>
                 <div class="project-intro">
                     <p>
