--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                 <p>Hi! I am David.</p>
                 <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
+            <div class="bubbles">
+                <img src="images/bubble.png">
+                <img src="images/bubble.png">
+                <img src="images/bubble.png">
+                <img src="images/bubble.png">
+                <img src="images/bubble.png">
+                <img src="images/bubble.png">
+            </div>
             <div>
                 <a data-scroll href="#about" class="scroll-down"></a>
             </div>
