--- a/index.html
+++ b/index.html
@@ -61,13 +61,21 @@
                         <li class="dropdown show">
                             <a class="nav-link dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                                BLOG
+                                MY STUDY NOTES
                             </a>
 
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 <a class="dropdown-item"
                                     href="https://davidhsieh.notion.site/23a21e6898054554b41863f24c12356f?v=a591d50d39914b558c98267883debb3e">Computer
                                     Security</a>
+                                <a class="dropdown-item"
+                                    href="https://davidhsieh.notion.site/React-6552bc33b7e64d0b960d8337dbe4e1ca">React</a>
+                                <a class="dropdown-item"
+                                    href="https://davidhsieh.notion.site/Digital-Product-Management-b504eea0c76d4a4bb90a9e8cd33109dd">Digital
+                                    Product Management</a>
+                                <a class="dropdown-item"
+                                    href="https://davidhsieh.notion.site/Papers-88540019cfa04d228c911da92499087d">Course
+                                    Papers</a>
                             </div>
                         </li>
                     </ul>
