--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="David Hsieh's personal website.">
-    <meta name="author" content="David Hsieh">
-    <meta name="keywords" content="David, Web, Web Design, Frontend, HTML5, JavaScript, CSS3">
+    <meta name="description" content="Sung-Yan(David) Hsieh's personal website.">
+    <meta name="author" content="Sung-Yan(David) Hsieh">
+    <meta name="keywords" content="Sung-Yan(David), Web, Web Design, Frontend, HTML5, JavaScript, CSS3">
 
     <!-- og: tags for Open Graph Protocol -->
-    <meta property='og:title' content='David Hsieh' />
+    <meta property='og:title' content='Sung-Yan(David) Hsieh' />
     <meta property='og:image' content='https://davidyen-888.github.io/Personal-Website/images/me.jpg' />
     <meta property='og:url' content='https://davidyen-888.github.io/Personal-Website/' />
 
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css">
 
 
-    <title>David Hsieh</title>
+    <title>Sung-Yan(David) Hsieh</title>
     <link rel="icon" href="images/internet.png">
 </head>
 
@@ -83,7 +83,7 @@
             </nav>
 
             <div class="home-content">
-                <p>Hi! I am David.</p>
+                <p>Hi! I am Sung-Yan(David) Hsieh.</p>
                 <p>I<span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
             <div class="bubbles">
@@ -107,7 +107,7 @@
         <div class="about-content row">
             <div class="about-content-left col">
                 <h4>
-                    <strong>David Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a></strong>
+                    <strong>Sung-Yan(David) Hsieh | MSCS@<a href="https://cse.ucsd.edu/">UCSD</a></strong>
                 </h4>
                 <p>
                     <a id="intro-btn" class="btn btn-secondary" data-toggle="collapse" href="#collapse-intro"
@@ -506,7 +506,7 @@
                     class="fas fa-address-card"></i></a>
             <p class="footer-links">©
                 <script>document.write(new Date().getFullYear());</script>
-                David Hsieh
+                Sung-Yan(David) Hsieh
             </p>
         </div>
     </section>
